--- a/.gitignore
+++ b/.gitignore
@@ -29,5 +29,8 @@ Network Trash Folder
 Temporary Items
 .apdisk
 
+# My own files
+user-stories.rtf
+
 
 # End of https://www.gitignore.io/api/macos
